--- a/aac-ionic/package.json
+++ b/aac-ionic/package.json
@@ -21,7 +21,10 @@
     "cordova-plugin-splashscreen",
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
-    "cordova-plugin-tts"
+    "cordova-plugin-tts",
+    "cordova-plugin-file",
+    "cordova-plugin-file-transfer",
+    "org.apache.cordova.file-transfer"
   ],
   "cordovaPlatforms": [
     "ios"
