--- a/aac-ionic/package.json
+++ b/aac-ionic/package.json
@@ -26,7 +26,8 @@
     "cordova-plugin-file-transfer",
     "org.apache.cordova.file-transfer",
     "cordova-plugin-google-analytics",
-    "cordova-plugin-network-information"
+    "cordova-plugin-network-information",
+    "cordova-sqlite-storage"
   ],
   "cordovaPlatforms": [
     "ios"
